# -SoC-OpenCV-

./: CMakeLists.txt  README.md  capture.cpp  decision.cpp  rv1106.cmake  v4l2_capture.cpp  v4l2_capture.h
